--- a/src/client/css/homepage/_donate-section.scss
+++ b/src/client/css/homepage/_donate-section.scss
@@ -4,29 +4,26 @@
   background-size: cover;
   background-position-y: top;
   background-repeat: no-repeat;
-  padding: 30px 0;
-  @media #{$medium-and-up} {
-    padding: 40px 0;
-  }
+  padding: 40px 0;
+  
   .intro-text {
     text-align: center;
-    font-weight: 900;
     color: $white;
-    font-size: 1.5rem;
+    font-size: 26px;
     text-transform: capitalize;
     line-height: 1.3;
     max-width: 440px;
-    padding-bottom: 30px;
+    padding-bottom: 40px;
     margin: 0 auto;
     text-shadow: 0px 1px 6px rgba(0, 0, 0, 0.83);
     @media #{$medium-and-up} {
-      font-size: 28px;
+      font-size: 26px;
       max-width: 600px;
-      padding-bottom: 40px;
     }
     @media #{$large-and-up} {
       text-shadow: 0px 1px 12px rgba(0, 0, 0, 0.72);
       font-size: 38px;
+      font-weight: 900;
       max-width: 856px;
     }
   }
@@ -129,7 +126,7 @@
     line-height: 40px;
     padding: 0 15px;
     margin-bottom: 10px;
-    font-size: 1.2rem;
+    font-size: 18px;
     @media #{$medium-only} {
       font-size: 1rem;
     }
@@ -142,6 +139,7 @@
     text-align: center;
     padding-top: 40px;
     .share-button {
+      font-size: 14px;
       box-sizing: content-box;
       width: 154px;
       display: inline-block;
